fix: Mobile layout issue

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -30,7 +30,7 @@
       color: #2f92f1;
     }
     50% {
-      color: #2666eb;
+      color: #3e69c5;
     }
     100% {
       color: #d4429e;
